# rediguard

./: .env.example  README.md  REDIS8_FEATURES.md  compose.dev.yml  compose.yml  github-actions-trust-policy.json  specification.md  start-dev.sh
.devcontainer/: .gitignore  Dockerfile  devcontainer.json
.devcontainer/etc/devcontainer/functions/: aws.sh  common.sh  docker.sh  (+3 more)
.github/workflows/: deploy.yml  manual-deploy.yml  test.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  demo_redis8.py  demo_test.py  main.py  main_old.py  pyproject.toml  redis_streamer.py  simple_seeder.py  simple_test.py  start_dev.sh  test_api.py  test_health.py  test_imports.py  test_integrated_features.py  test_redis8.py  test_redis8_features.py
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py  redis.py  redis_stack_backup.py  redis_stack_clean.py
backend/app/services/: __init__.py  ai_service.py  llm_service.py  security_service.py  security_service_backup.py  security_service_new.py
backend/app/utils/: __init__.py  logging.py  seed_and_stream_data.py
backend/app/workers/: __init__.py  event_processor.py
docs/: AWS_OIDC_SETUP.md  CICD_SETUP.md  DATA_MANAGEMENT.md  rediguard-deployment-policy.json
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx  page_new.tsx
frontend/src/components/: dashboard-layout.tsx  markdown-renderer.tsx
scripts/: setup-aws-oidc.sh  setup-ecr.sh  test-data-management.sh  validate-secrets.sh
(+16 files in other folders)
