[project]
name = "rediguard-backend"
version = "0.1.0"
description = "Real-Time Security & Threat Detection MVP using Redis 8 + AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "redis>=5.0.0",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "geopy>=2.4.1",
    "python-dateutil>=2.9.0",
    "requests>=2.32.4",
]
